Fixed spacing.

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -168,6 +168,7 @@ body {
         display: block;
         padding: 7px 20px;
         border-bottom: 1px solid #1e2124;
+        border-top: 1px solid #1e2124;
         color: rgb(241, 237, 237);
         font-size: 11px;
         position: relative;
@@ -205,7 +206,7 @@ body {
         color: #ffffff;
         text-align: left;
         position: static;
-        padding-left: 120px;
+        padding-left: 100px;
         padding-top: 20px;
     }
 
